--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'contacto@paratexto.net'
+phone: '55-4695-2640'
 contact_button_link: 'contact'
