--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,21 +1,21 @@
 main:
-  - name: "Services"
+  - name: "Servicios"
     url: "/services/"
     weight: 2
-  - name: "Team"
+  - name: "Equipo"
     url: "/team/"
     weight: 3
-  - name: "About"
+  - name: "Acerca de"
     url: "/about/"
     weight: 4
-  - name: "Contact"
+  - name: "Contacto"
     url: "/contact/"
     weight: 5
 
 footer:
-  - name: "Home"
+  - name: "Inicio"
     url: "/"
     weight: 1
-  - name: "Contact"
+  - name: "Contacto"
     url: "/contact/"
     weight: 2
