--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
-google_analytics_id: ""  
-meta_twitter_site: "@zerostaticio"
-meta_twitter_creator: "@zerostaticio"
-copyright_text: 'Free Jekyll theme by <a class="zerostatic" href="https://www.zerostatic.io">www.zerostatic.io</a>'
+google_analytics_id: ""
+meta_twitter_site: "@paratexto_ed"
+meta_twitter_creator: "@intratextual"
+copyright_text: 'Con mucho amor: Paratexto | Text Boutique & So. 2021&#10087;'
