--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,4 +1,4 @@
-google_analytics_id: ""
+google_analytics_id: "G-3E1Q0QP7EG"
 meta_twitter_site: "@paratexto_ed"
 meta_twitter_creator: "@intratextual"
 copyright_text: 'Con mucho amor: Paratexto | Text Boutique & So. 2022&#10087;'
